implement mylinkedlist